# claude-visual

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.sh  deny.toml
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/: dependabot.yml  mlc_config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  nightly.yml  pr.yml  release.yml  security.yml
assets/: Info.plist  icon.icns
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FEATURES.md  GETTING_STARTED.md  PLUGINS.md  ROADMAP.md  TECH_STACK.md
packaging/appimage/: AppImageBuilder.yml  claude-visual.desktop
packaging/debian/: changelog  control  copyright  rules
packaging/flatpak/: com.claude-visual.app.desktop  com.claude-visual.app.metainfo.xml  com.claude-visual.app.yml
scripts/: build-appimage.sh  build-deb.sh  build-flatpak.sh  generate-icons.sh
src/: main.rs
src/actions/: handlers.rs  keybindings.rs  mod.rs
src/agent/: mod.rs
src/agent/executor/: mod.rs  traits.rs  types.rs
src/agent/planner/: errors.rs  mod.rs  planner.rs  tests.rs  types.rs
src/agent/rollback/: checkpoint.rs  execution.rs  manager.rs  mod.rs  query.rs  recording.rs  tests.rs  types.rs
src/agent/task/: mod.rs  node.rs  task.rs  tests.rs  tree.rs  types.rs
src/ai/: mod.rs
src/ai/claude/: mod.rs  types.rs
src/ai/context/: item.rs  manager.rs  mod.rs  types.rs  utils.rs
src/ai/mention/: mod.rs  parser.rs  types.rs  utils.rs
src/ai/ollama/: core.rs  mod.rs  provider.rs  types.rs
src/ai/openai/: client.rs  mod.rs  models.rs  provider.rs  tests.rs  types.rs
src/ai/provider/: config.rs  error.rs  message.rs  mod.rs  model.rs  provider_trait.rs  request.rs  response.rs  stream.rs
src/ai/summarizer/: analysis.rs  mod.rs  summarizer.rs  tests.rs  utils.rs
src/app/: cache.rs  lazy.rs  mod.rs  state.rs
src/app/debounce/: batch.rs  channel.rs  coalescer.rs  debouncer.rs  mod.rs  tests.rs  throttled.rs
src/app/pool/: core.rs  guard.rs  mod.rs  specialized.rs  tests.rs  types.rs
src/app/settings/: editor.rs  keybindings.rs  language.rs  mod.rs  ui.rs
src/app/theme/: colors.rs  defaults.rs  mod.rs  tests.rs  theme.rs  types.rs
src/app/theme_loader/: async_helpers.rs  builder.rs  discovery.rs  io.rs  loader.rs  mod.rs  tests.rs  types.rs
src/claude/: message.rs  mod.rs  streaming.rs
src/claude/client/: core.rs  mod.rs  parser.rs  stream.rs
src/cloud/: mod.rs
src/cloud/auth/: core.rs  mod.rs  oauth.rs  storage.rs  types.rs  utils.rs
src/cloud/storage/: crypto.rs  mod.rs  types.rs
src/cloud/sync/: conflict.rs  manager.rs  mod.rs  (+4 more)
src/debug/: client.rs.backup  mod.rs
src/git/: mod.rs  status.rs  worktree.rs
src/i18n/: locale.rs  mod.rs
src/lsp/: mod.rs
src/markdown/: mod.rs  parser.rs  renderer.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/plugins/: loader.rs  mod.rs  registry.rs
src/project/: config.rs  manager.rs  mod.rs  recent.rs
src/storage/: mod.rs  models.rs
src/syntax/: mod.rs
src/terminal/: mod.rs
src/ui/: mod.rs
src/update/: checker.rs  installer.rs  mod.rs
(+1568 files in other folders)
